src/test/deca/syntax/invalid/resultats/test24_ifelse-lex.res
'{': [@0,303:303='{',<36>,14:0]
IDENT: [@1,306:308='int',<26>,15:1]
IDENT: [@2,310:310='i',<26>,15:5]
';': [@3,311:311=';',<39>,15:6]
'if': [@4,314:315='if',<11>,16:1]
'(': [@5,316:316='(',<34>,16:3]
'false': [@6,317:321='false',<10>,16:4]
')': [@7,322:322=')',<35>,16:9]
'{': [@8,323:323='{',<36>,16:10]
IDENT: [@9,327:327='i',<26>,17:2]
'=': [@10,329:329='=',<29>,17:4]
INT: [@11,331:331='2',<1>,17:6]
';': [@12,332:332=';',<39>,17:7]
'}': [@13,335:335='}',<37>,18:1]
'else': [@14,337:340='else',<9>,18:3]
IDENT: [@15,344:344='i',<26>,19:2]
'=': [@16,345:345='=',<29>,19:3]
INT: [@17,346:346='1',<1>,19:4]
';': [@18,347:347=';',<39>,19:5]
'println': [@19,354:360='println',<18>,22:1]
'(': [@20,361:361='(',<34>,22:8]
STRING: [@21,362:368='"Hello"',<47>,22:9]
')': [@22,369:369=')',<35>,22:16]
';': [@23,370:370=';',<39>,22:17]
'}': [@24,372:372='}',<37>,23:0]
